// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer draw() draw colored text (blue) 1`] = `
"                                      
                                      
                                      
            55 55 55                  
         55 55 55                     
                                      
   55 55 55 55 55 55                  
   55 55 55 55 55 55 55               
55 55 55       55 55 55               
55 55 55 55 55 55 55 55               
55 55 55                              
   55 55 55 55 55 55 55               
   55 55 55 55 55 55                  "
`;

exports[`Renderer draw() draw colored text (green) 1`] = `
"                                      
                                      
                                      
            55 55 55                  
         55 55 55                     
                                      
   55 55 55 55 55 55                  
   55 55 55 55 55 55 55               
55 55 55       55 55 55               
55 55 55 55 55 55 55 55               
55 55 55                              
   55 55 55 55 55 55 55               
   55 55 55 55 55 55                  "
`;

exports[`Renderer draw() draw colored text (red) 1`] = `
"                                      
                                      
                                      
            55 55 55                  
         55 55 55                     
                                      
   55 55 55 55 55 55                  
   55 55 55 55 55 55 55               
55 55 55       55 55 55               
55 55 55 55 55 55 55 55               
55 55 55                              
   55 55 55 55 55 55 55               
   55 55 55 55 55 55                  "
`;

exports[`Renderer draw() draw missing char (作) 1`] = `
"                                      
                                      
                                      
                                      
5c ff ff ff ff ff ff 24               
5c 60             94 24               
5c 60             94 24               
5c 60             94 24               
5c 60             94 24               
5c 60             94 24               
5c 60             94 24               
5c 60             94 24               
5c 60             94 24               "
`;

exports[`Renderer draw() draw non-ASCII letter (é) 1`] = `
"                                      
                                      
                                      
            71 b6 8                  
         54 af 6                     
                                      
   c 91 e1 f0 b4 1f                  
   ae b6 21 e 8c ce 2               
1c ff 1a       2 f1 2d               
3d ff ff ff ff ff ff 4d               
1e fd 13                              
   af b3 26 a 35 af 7               
   d 8b dd f4 c8 4f                  "
`;

exports[`Renderer draw() draws a letter (H) 1`] = `
"                                      
                                      
                                      
                                      
   b8 90             c8 80            
   b8 90             c8 80            
   b8 90             c8 80            
   b8 90             c8 80            
   b8 ff ff ff ff ff ff 80            
   b8 90             c8 80            
   b8 90             c8 80            
   b8 90             c8 80            
   b8 90             c8 80            "
`;

exports[`Renderer draw() draws with default coordinates 1`] = `
"                                      
                                      
                                      
   b8 90             c8 80            
   b8 90             c8 80            
   b8 90             c8 80            
   b8 90             c8 80            
   b8 ff ff ff ff ff ff 80            
   b8 90             c8 80            
   b8 90             c8 80            
   b8 90             c8 80            
   b8 90             c8 80            
                                      "
`;
